--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <header>
             <nav class="principalNav">
                 <ul class="menu">
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="peliculas/peliculas.html">Películas</a></li>
-                    <li><a href="series.html">Series</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="views/peliculas/peliculas.html">Películas</a></li>
+                    <li><a href="views/series.html">Series</a></li>
                     <li>
                         <a href="#">Géneros</a>
                         <ul class="submenu">
