--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                     <div class="btnFlecha flechaIzquierda">
                         <button
                             class="iconob flechabtn"
-                            onclick="scrollIzquierda()"
+                            onclick="scrollIzquierdaComedia()"
+                            
                         >
                             <img
                                 class="iconoi"
@@ -82,114 +83,104 @@
                             />
                         </button>
                     </div>
-                    <div class="pelis" id="imageDramaContainer">
+                    <div class="pelis" id="imageComediaContainer">
                         <figure class="imageDrama">
                             <img
-                                src="../Public/contenido/img/Peliculas/RushHour3.jpg"
+                                src="../../Public/contenido/img/Peliculas/RushHour3.jpg"
                                 alt=""
                             />
                             <div class="trans">
                                 <h3>Una Pareja Explosiva</h3>
-                                <p>
-                                    El este y el oeste se encuentran nuevamente
-                                    cuando el asesinato del embajador Ha provoca
-                                    la reunión de Lee y Carter.
+                                <p> El este y el oeste se encuentran nuevamente cuando el asesinato del embajador Ha provoca la reunión de Lee y Carter.
                                 </p>
                                 <div class="botones">
-                                    <button class="ver">Ver</button>
                                     <button class="verTrailer">
                                         Ver Trailer
                                     </button>
+                                    <div class="video-container">
+                                        <span class="close">X</span>
+                                        <video src="/Public/contenido/trailers/Peliculas/rushHour3.mp4" controls></video>
+                                    </div>
                                 </div>
                             </div>
                         </figure>
                         <figure class="imageDrama">
                             <img
-                                src="../Public/contenido/img/Peliculas/Ted.jpg"
+                                src="../../Public/contenido/img/Peliculas/Ted.jpg"
                                 alt=""
                             />
                             <div class="trans">
                                 <h3>Ted</h3>
-                                <p>
-                                    Cuando John Bennett era un niño pequeño,
-                                    pidió el deseo de que Ted, su querido oso de
-                                    peluche, cobrara vida.
+                                <p> Cuando John Bennett era un niño pequeño, pidió el deseo de que Ted, su querido oso de peluche, cobrara vida.
                                 </p>
                                 <div class="botones">
-                                    <button class="ver">Ver</button>
                                     <button class="verTrailer">
                                         Ver Trailer
                                     </button>
+                                    <div class="video-container">
+                                        <span class="close">X</span>
+                                        <video src="/Public/contenido/trailers/Peliculas/ted.mp4" controls></video>
+                                    </div>
                                 </div>
                             </div>
                         </figure>
                         <figure class="imageDrama">
                             <img
-                                src="../Public/contenido/img/Peliculas/Baywatch.jpg"
+                                src="../../Public/contenido/img/Peliculas/Baywatch.jpg"
                                 alt=""
                             />
                             <div class="trans">
                                 <h3>Guardianes de la Bahia</h3>
-                                <p>
-                                    Dos socorristas, el veterano Mitch Buchannon
-                                    y el joven y arrogante Matt Brody, deben
-                                    detener a unos criminales que amenazan el
-                                    futuro de la bahía en la que trabajan.
-                                    Mientras colaboran aprenderán a respetarse
-                                    mutuamente, dado que el comienzo de su
-                                    relación profesional ha sido complicado
+                                <p> Dos socorristas, el veterano Mitch Buchannon y el joven y arrogante Matt Brody, deben detener a unos criminales que amenazan el futuro de la bahía en la que trabajan. Mientras colaboran aprenderán a respetarse mutuamente, dado que el comienzo de su relación profesional ha sido complicado
                                 </p>
                                 <div class="botones">
-                                    <button class="ver">Ver</button>
                                     <button class="verTrailer">
                                         Ver Trailer
                                     </button>
+                                    <div class="video-container">
+                                        <span class="close">X</span>
+                                        <video src="/Public/contenido/trailers/Peliculas/baywatch.mp4" controls></video>
+                                    </div>
                                 </div>
                             </div>
                         </figure>
                         <figure class="imageDrama">
                             <img
-                                src="../Public/contenido/img/Peliculas/BadBoysForLife.jpg"
+                                src="../../Public/contenido/img/Peliculas/BadBoysForLife.jpg"
                                 alt=""
                             />
                             <div class="trans">
                                 <h3>Bad Boys Para Siempre</h3>
-                                <p>
-                                    Los veteranos agentes Mike Lowery y Marcus
-                                    Burnett vuelven a colaborar para detener a
-                                    Armando Armas, el violento líder de un
-                                    cartel de la droga afincado en Miami. En
-                                    esta ocasión, los apoya el equipo AMMO, un
-                                    grupo de élite del Departamento de Policía
-                                    de Miami.
+                                <p> Los veteranos agentes Mike Lowery y Marcus Burnett vuelven a colaborar para detener a Armando Armas, el violento líder de un cartel de la droga afincado en Miami. En esta ocasión, los apoya el equipo AMMO, un grupo de élite del Departamento de Policía de Miami.
                                 </p>
                                 <div class="botones">
-                                    <button class="ver">Ver</button>
                                     <button class="verTrailer">
                                         Ver Trailer
                                     </button>
+                                    <div class="video-container">
+                                        <span class="close">X</span>
+                                        <video src="/Public/contenido/trailers/Peliculas/badBoysForLife.mp4" controls></video>
+                                    </div>
                                 </div>
                             </div>
                         </figure>
                         <figure class="imageDrama">
                             <img
-                                src="../Public/contenido/img/Peliculas/RideAlong.jpg"
+                                src="../../Public/contenido/img/Peliculas/RideAlong.jpg"
                                 alt=""
                             />
                             <div class="trans">
                                 <h3>Ride Along</h3>
-                                <p>
-                                    Cuando un policía veterano pone a prueba a
-                                    su futuro cuñado, un recluta dispuesto a
-                                    demostrar que es más que un adicto a los
-                                    videojuegos, ambos deben enfrentar al
-                                    criminal más peligroso de Atlanta.
+                                <p> Cuando un policía veterano pone a prueba a su futuro cuñado, un recluta dispuesto a demostrar que es más que un adicto a los videojuegos, ambos deben enfrentar al criminal más peligroso de Atlanta.
                                 </p>
                                 <div class="botones">
-                                    <button class="ver">Ver</button>
                                     <button class="verTrailer">
                                         Ver Trailer
                                     </button>
+                                    <div class="video-container">
+                                        <span class="close">X</span>
+                                        <video src="/Public/contenido/trailers/Peliculas/rideAlong.mp4" controls></video>
+                                    </div>
                                 </div>
                             </div>
                         </figure>
@@ -197,7 +188,7 @@
                     <div class="btnFlecha flechaDerecha">
                         <button
                             class="iconob flechabtn"
-                            onclick="scrollDerecha()"
+                            onclick="scrollDerechaComedia()"
                         >
                             <img
                                 class="iconoi"
@@ -210,15 +201,18 @@
             </div>
         </div>
 
-        <footer>
-            <h2>&copy CODE_DRAGON</h2>
-            <figure class="redes">
-                <img class="red" src="/Public/contenido/img/Logos/facebook.png" alt="facebook">
-                <img class="red" src="/Public/contenido/img/Logos/instagram.png" alt="instagram">
-                <img class="red" src="/Public/contenido/img/Logos/twitter.png" alt="twitter">
-            </figure>
-        </footer>
+       
     </body>
+    <footer>
+        <h2>&copy CODE_DRAGON</h2>
+        <figure class="redes">
+            <img class="red" src="/Public/contenido/img/Logos/facebook.png" alt="facebook">
+            <img class="red" src="/Public/contenido/img/Logos/instagram.png" alt="instagram">
+            <img class="red" src="/Public/contenido/img/Logos/twitter.png" alt="twitter">
+        </figure>
+    </footer>
 </html>
 <script src="../Public/js/style.js"></script>
 <script src="../Public/js/scroll.js"></script>
+<script src="/Public/js/modal.js"></script>
+
