--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="../Public/css/style.css" />
-        <link rel="shortcut icon" href="Public/contenido/img/Logos/logoEmpresa.png" type="image/x-icon">
+        <link
+            rel="shortcut icon"
+            href="Public/contenido/img/Logos/logoEmpresa.png"
+            type="image/x-icon"
+        />
         <title>start voyage</title>
     </head>
     <body>
-        <header>
+        <header id="navDefault">
             <nav class="principalNav">
                 <ul class="menu">
                     <li><a href="../index.html">Inicio</a></li>
-                    <li><a href="views/peliculas/peliculas.html">Películas</a></li>
+                    <li>
+                        <a href="views/peliculas/peliculas.html">Películas</a>
+                    </li>
                     <li><a href="views/series.html">Series</a></li>
                     <li>
                         <a href="#">Géneros</a>
@@ -28,15 +34,64 @@
             <input id="buscador" type="text" placeholder="Buscar" />
             <img
                 id="loupe"
-                src="../Public/contenido/img/Logos/loupe.png"
+                src="Public/contenido/img/Logos/loupe.png"
                 alt="loupe"
             />
 
             <img
                 id="logo"
-                src="../Public/contenido/img/Logos/logoEmpresa.png"
+                src="Public/contenido/img/Logos/logoEmpresa.png"
                 alt="logo"
             />
+        </header>
+
+        <header id="hamburguesa">
+            <button id="btnBurguer">
+                <img
+                    id="imgHamburguesa"
+                    src="Public/contenido/img/Main/menu-hamburguesa.png"
+                    alt=""
+                />
+                <img
+                    id="imgClose"
+                    src="Public/contenido/img/Main/x.png"
+                    alt=""
+                />
+            </button>
+            <nav id="navBurguer">
+                <ul class="menuBurguer">
+                    <li>
+                        <a href="../index.html">Inicio</a>
+                    </li>
+                    <li>
+                        <a href="views/peliculas/peliculas.html">películas</a>
+                    </li>
+                    <li>
+                        <a href="views/series.html">series</a>
+                    </li>
+                    <li>
+                        <a href="#">géneros</a>
+                        <ul class="submenuHamburguer">
+                            <li>
+                                <a href="#">Animación</a>
+                            </li>
+                            <li>
+                                <a href="#">comedia</a>
+                            </li>
+                            <li>
+                                <a href="#">Drama</a>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+                <div id="infoCompany">
+                    <input
+                        id="buscadorBurguer"
+                        type="text"
+                        placeholder="Buscar"
+                    />
+                </div>
+            </nav>
         </header>
         <section class="slider">
             <div class="slider-container">
@@ -74,7 +129,6 @@
                         <button
                             class="iconob flechabtn"
                             onclick="scrollIzquierdaComedia()"
-                            
                         >
                             <img
                                 class="iconoi"
@@ -91,7 +145,10 @@
                             />
                             <div class="trans">
                                 <h3>Una Pareja Explosiva</h3>
-                                <p> El este y el oeste se encuentran nuevamente cuando el asesinato del embajador Ha provoca la reunión de Lee y Carter.
+                                <p>
+                                    El este y el oeste se encuentran nuevamente
+                                    cuando el asesinato del embajador Ha provoca
+                                    la reunión de Lee y Carter.
                                 </p>
                                 <div class="botones">
                                     <button class="verTrailer">
@@ -99,7 +156,10 @@
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
-                                        <video src="/Public/contenido/trailers/Peliculas/rushHour3.mp4" controls></video>
+                                        <video
+                                            src="/Public/contenido/trailers/Peliculas/rushHour3.mp4"
+                                            controls
+                                        ></video>
                                     </div>
                                 </div>
                             </div>
@@ -111,7 +171,10 @@
                             />
                             <div class="trans">
                                 <h3>Ted</h3>
-                                <p> Cuando John Bennett era un niño pequeño, pidió el deseo de que Ted, su querido oso de peluche, cobrara vida.
+                                <p>
+                                    Cuando John Bennett era un niño pequeño,
+                                    pidió el deseo de que Ted, su querido oso de
+                                    peluche, cobrara vida.
                                 </p>
                                 <div class="botones">
                                     <button class="verTrailer">
@@ -119,7 +182,10 @@
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
-                                        <video src="/Public/contenido/trailers/Peliculas/ted.mp4" controls></video>
+                                        <video
+                                            src="/Public/contenido/trailers/Peliculas/ted.mp4"
+                                            controls
+                                        ></video>
                                     </div>
                                 </div>
                             </div>
@@ -131,7 +197,14 @@
                             />
                             <div class="trans">
                                 <h3>Guardianes de la Bahia</h3>
-                                <p> Dos socorristas, el veterano Mitch Buchannon y el joven y arrogante Matt Brody, deben detener a unos criminales que amenazan el futuro de la bahía en la que trabajan. Mientras colaboran aprenderán a respetarse mutuamente, dado que el comienzo de su relación profesional ha sido complicado
+                                <p>
+                                    Dos socorristas, el veterano Mitch Buchannon
+                                    y el joven y arrogante Matt Brody, deben
+                                    detener a unos criminales que amenazan el
+                                    futuro de la bahía en la que trabajan.
+                                    Mientras colaboran aprenderán a respetarse
+                                    mutuamente, dado que el comienzo de su
+                                    relación profesional ha sido complicado
                                 </p>
                                 <div class="botones">
                                     <button class="verTrailer">
@@ -139,7 +212,10 @@
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
-                                        <video src="/Public/contenido/trailers/Peliculas/baywatch.mp4" controls></video>
+                                        <video
+                                            src="/Public/contenido/trailers/Peliculas/baywatch.mp4"
+                                            controls
+                                        ></video>
                                     </div>
                                 </div>
                             </div>
@@ -151,7 +227,14 @@
                             />
                             <div class="trans">
                                 <h3>Bad Boys Para Siempre</h3>
-                                <p> Los veteranos agentes Mike Lowery y Marcus Burnett vuelven a colaborar para detener a Armando Armas, el violento líder de un cartel de la droga afincado en Miami. En esta ocasión, los apoya el equipo AMMO, un grupo de élite del Departamento de Policía de Miami.
+                                <p>
+                                    Los veteranos agentes Mike Lowery y Marcus
+                                    Burnett vuelven a colaborar para detener a
+                                    Armando Armas, el violento líder de un
+                                    cartel de la droga afincado en Miami. En
+                                    esta ocasión, los apoya el equipo AMMO, un
+                                    grupo de élite del Departamento de Policía
+                                    de Miami.
                                 </p>
                                 <div class="botones">
                                     <button class="verTrailer">
@@ -159,7 +242,10 @@
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
-                                        <video src="/Public/contenido/trailers/Peliculas/badBoysForLife.mp4" controls></video>
+                                        <video
+                                            src="/Public/contenido/trailers/Peliculas/badBoysForLife.mp4"
+                                            controls
+                                        ></video>
                                     </div>
                                 </div>
                             </div>
@@ -171,7 +257,12 @@
                             />
                             <div class="trans">
                                 <h3>Ride Along</h3>
-                                <p> Cuando un policía veterano pone a prueba a su futuro cuñado, un recluta dispuesto a demostrar que es más que un adicto a los videojuegos, ambos deben enfrentar al criminal más peligroso de Atlanta.
+                                <p>
+                                    Cuando un policía veterano pone a prueba a
+                                    su futuro cuñado, un recluta dispuesto a
+                                    demostrar que es más que un adicto a los
+                                    videojuegos, ambos deben enfrentar al
+                                    criminal más peligroso de Atlanta.
                                 </p>
                                 <div class="botones">
                                     <button class="verTrailer">
@@ -179,7 +270,10 @@
                                     </button>
                                     <div class="video-container">
                                         <span class="close">X</span>
-                                        <video src="/Public/contenido/trailers/Peliculas/rideAlong.mp4" controls></video>
+                                        <video
+                                            src="/Public/contenido/trailers/Peliculas/rideAlong.mp4"
+                                            controls
+                                        ></video>
                                     </div>
                                 </div>
                             </div>
@@ -200,19 +294,29 @@
                 </section>
             </div>
         </div>
-
-       
     </body>
     <footer>
         <h2>&copy CODE_DRAGON</h2>
         <figure class="redes">
-            <img class="red" src="/Public/contenido/img/Logos/facebook.png" alt="facebook">
-            <img class="red" src="/Public/contenido/img/Logos/instagram.png" alt="instagram">
-            <img class="red" src="/Public/contenido/img/Logos/twitter.png" alt="twitter">
+            <img
+                class="red"
+                src="/Public/contenido/img/Logos/facebook.png"
+                alt="facebook"
+            />
+            <img
+                class="red"
+                src="/Public/contenido/img/Logos/instagram.png"
+                alt="instagram"
+            />
+            <img
+                class="red"
+                src="/Public/contenido/img/Logos/twitter.png"
+                alt="twitter"
+            />
         </figure>
     </footer>
 </html>
 <script src="../Public/js/style.js"></script>
 <script src="../Public/js/scroll.js"></script>
 <script src="/Public/js/modal.js"></script>
-
+<script src="Public/js/hamburguer.js"></script>
