--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="Public/css/normalize.css">
         <link rel="stylesheet" href="../Public/css/style.css" />
         <link
             rel="shortcut icon"
@@ -15,7 +16,7 @@
         <header id="navDefault">
             <nav class="principalNav">
                 <ul class="menu">
-                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="#">Inicio</a></li>
                     <li>
                         <a href="views/peliculas/peliculas.html">Películas</a>
                     </li>
