--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <header id="navDefault">
             <nav class="principalNav">
                 <ul class="menu">
+                    <li><a href="#">Inicio</a></li>
                     <li>
                         <a href="/peliculas.html">Películas</a>
                     </li>
@@ -23,7 +24,7 @@
                 </ul>
             </nav>
 
-            <input id="buscador" type="text" placeholder="Buscar" />
+            <input id="buscador" class="seeker" type="text" placeholder="Buscar" />
 
 
             <a href="/index.html">
@@ -51,6 +52,9 @@
             </button>
             <nav id="navBurguer">
                 <ul class="menuBurguer">
+
+                    <li><a href="#">Inicio</a></li>
+
                     <li>
                         <a href="/peliculas.html">películas</a>
                     </li>
@@ -75,6 +79,7 @@
                 <div id="infoCompany">
                     <input
                         id="buscadorBurguer"
+                        class="seeker"
                         type="text"
                         placeholder="Buscar"
                     />
