--- a/series.html
+++ b/series.html
@@ -12,7 +12,7 @@
         <header id="navDefault">
             <nav class="principalNav">
                 <ul class="menu">
-                    
+                    <li><a href="index.html">Inicio</a></li>
                     <li>
                         <a href="/peliculas.html">Películas</a>
                     </li>
@@ -28,7 +28,7 @@
                 </ul>
             </nav>
 
-            <input id="buscador" type="text" placeholder="Buscar" />
+            <input id="buscador" class="seeker" type="text" placeholder="Buscar" />
 
             <a href="/index.html">
                 <img
@@ -81,6 +81,7 @@
                 <div id="infoCompany">
                     <input
                         id="buscadorBurguer"
+                        class="seeker"
                         type="text"
                         placeholder="Buscar"
                     />
@@ -482,8 +483,8 @@
         </footer>
     </body>
     </html>
-<script src="../Public/js/hamburguer.js"></script>
-<script src="../Public/js/style.js"></script>
-<script src="/Public/js/modal.js"></script>
-<script src="../Public/js/scroll.js"></script>
-<script src="../Public/js/buscador.js"></script>
+<script src="Public/js/hamburguer.js"></script>
+<script src="Public/js/style.js"></script>
+<script src="Public/js/modal.js"></script>
+<script src="Public/js/scroll.js"></script>
+<script src="Public/js/buscador.js"></script>
