--- a/peliculas.html
+++ b/peliculas.html
@@ -12,6 +12,7 @@
         <header id="navDefault">
             <nav class="principalNav">
                 <ul class="menu">
+                    <li><a href="index.html">Inicio</a></li>
                     <li>
                         <a href="/peliculas.html">Películas</a>
                     </li>
@@ -26,6 +27,8 @@
                     </li>
                 </ul>
             </nav>
+
+            <input id="buscador" class="seeker" type="text" placeholder="Buscar" />
 
             <a href="/index.html">
                 <img
@@ -51,6 +54,7 @@
             </button>
             <nav id="navBurguer">
                 <ul class="menuBurguer">
+                    <li><a href="index.html">Inicio</a></li>
                     <li>
                         <a href="/peliculas.html">películas</a>
                     </li>
@@ -75,6 +79,7 @@
                 <div id="infoCompany">
                     <input
                         id="buscadorBurguer"
+                        class="seeker" 
                         type="text"
                         placeholder="Buscar"
                     />
@@ -439,8 +444,7 @@
         </footer>
     </body>
 </html>
-<script src="../../Public/js/hamburguer.js"></script>
-<script src="../../Public/js/style.js"></script>
-<script src="../Public/js/modal.js"></script>
-<script src="../../Public/js/scroll.js"></script>
-<script src="../../Public/js/buscador.js"></script>
+<script src="Public/js/hamburguer.js"></script>
+<script src="Public/js/modal.js"></script>
+<script src="Public/js/scroll.js"></script>
+<script src="Public/js/buscador.js"></script>
