--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </ul>
             </nav>
 
-            <input id="buscador" class="seeker" type="text" placeholder="Buscar" />
+            <input id="buscador" class="seeker" type="text" placeholder="Buscar" onkeyup="buscarPeliculas()" />
 
 
             <a href="/index.html">
