--- a/series.html
+++ b/series.html
@@ -28,7 +28,7 @@
                 </ul>
             </nav>
 
-            <input id="buscador" class="seeker" type="text" placeholder="Buscar" />
+            <input id="buscador" class="seeker" type="text" placeholder="Buscar" onkeyup="buscarPeliculas()" />
 
             <a href="/index.html">
                 <img
@@ -84,6 +84,7 @@
                         class="seeker"
                         type="text"
                         placeholder="Buscar"
+                        onkeyup="buscarPeliculas()"
                     />
                 </div>
             </nav>
