corrección de código

--- a/index.html
+++ b/index.html
@@ -274,29 +274,38 @@
                 </section>
             </div>
         </div>
+
+        <div id="modal" class="modal">
+            <div class="modal-content">
+                <span class="close" onclick="cerrarModal()">&times;</span>
+                <div id="modalContent" class="modal-columns"></div>
+            </div>
+        </div>
+
+        <footer>
+            <h2>&copy CODE_DRAGON</h2>
+            <figure class="redes">
+                <img
+                    class="red"
+                    src="/Public/img/principales/facebook.png"
+                    alt="facebook"
+                />
+                <img
+                    class="red"
+                    src="/Public/img/principales/instagram.png"
+                    alt="instagram"
+                />
+                <img
+                    class="red"
+                    src="/Public/img/principales/twitter.png"
+                    alt="twitter"
+                />
+            </figure>
+        </footer>
     </body>
-    <footer>
-        <h2>&copy CODE_DRAGON</h2>
-        <figure class="redes">
-            <img
-                class="red"
-                src="/Public/img/principales/facebook.png"
-                alt="facebook"
-            />
-            <img
-                class="red"
-                src="/Public/img/principales/instagram.png"
-                alt="instagram"
-            />
-            <img
-                class="red"
-                src="/Public/img/principales/twitter.png"
-                alt="twitter"
-            />
-        </figure>
-    </footer>
 </html>
-<script src="../Public/js/style.js"></script>
-<script src="../Public/js/scroll.js"></script>
-<script src="/Public/js/modal.js"></script>
+<script src="Public/js/buscador.js"></script>
+<script src="Public/js/style.js"></script>
+<script src="Public/js/scroll.js"></script>
+<script src="Public/js/modal.js"></script>
 <script src="Public/js/hamburguer.js"></script>
