fix: "errores de enlaces"

--- a/peliculas.html
+++ b/peliculas.html
@@ -12,7 +12,7 @@
         <header id="navDefault">
             <nav class="principalNav">
                 <ul class="menu">
-                    <li><a href="#">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="/peliculas.html">Películas</a></li>
                     <li><a href="/series.html">Series</a></li>
                 </ul>
@@ -32,7 +32,7 @@
             </button>
             <nav id="navBurguer">
                 <ul class="menuBurguer">
-                    <li><a href="#">Inicio</a></li>
+                    <li><a href="index.html">Inicio</a></li>
                     <li><a href="/peliculas.html">películas</a></li>
                     <li><a href="/series.html">series</a></li>
                     <li>
