fix: "Enlaces sin /"

--- a/peliculas.html
+++ b/peliculas.html
@@ -6,21 +6,21 @@
         <link rel="stylesheet" href="../../Public/css/normalize.css">
         <link rel="stylesheet" href="../../Public/css/style.css" />
         <link rel="shortcut icon" href="Public/contenido/img/Logos/logoEmpresa.png" type="image/x-icon">
-        <title>Star Voyage Peliculas</title>
+        <title>Star Voyage Películas</title>
     </head>
     <body>
         <header id="navDefault">
             <nav class="principalNav">
                 <ul class="menu">
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="/peliculas.html">Películas</a></li>
-                    <li><a href="/series.html">Series</a></li>
+                    <li><a href="peliculas.html">Películas</a></li>
+                    <li><a href="series.html">Series</a></li>
                 </ul>
             </nav>
     
             <input class="seeker" id="buscador" type="text" placeholder="Buscar" onkeyup="buscarPeliculas()"/>
     
-            <a href="/index.html">
+            <a href="index.html">
                 <img id="logo" src="Public/img/principales/principal.png" alt="logo" />
             </a>
         </header>
@@ -33,8 +33,8 @@
             <nav id="navBurguer">
                 <ul class="menuBurguer">
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="/peliculas.html">películas</a></li>
-                    <li><a href="/series.html">series</a></li>
+                    <li><a href="peliculas.html">películas</a></li>
+                    <li><a href="series.html">series</a></li>
                     <li>
                         <a href="#">géneros</a>
                         <ul class="submenuHamburguer">
@@ -52,7 +52,7 @@
         <div class="container" id="animacion">
             <div class="scroll-images">
                 <div class="titleContainer">
-                    <h2>Animacion</h2>
+                    <h2>Animación</h2>
                 </div>
 
                 <section class="genero">
