--- a/series.html
+++ b/series.html
@@ -14,9 +14,9 @@
                 <ul class="menu">
                     <li><a href="index.html">Inicio</a></li>
                     <li>
-                        <a href="/peliculas.html">Películas</a>
+                        <a href="peliculas.html">Películas</a>
                     </li>
-                    <li><a href="/series.html">Series</a></li>
+                    <li><a href="series.html">Series</a></li>
                     <li>
                         <a href="#">Géneros</a>
                         <ul class="submenu">
@@ -30,7 +30,7 @@
 
             <input id="buscador" class="seeker" type="text" placeholder="Buscar" onkeyup="buscarPeliculas()" />
 
-            <a href="/index.html">
+            <a href="index.html">
                 <img
                 id="logo"
                 src="Public/img/principales/principal.png"
@@ -55,10 +55,10 @@
             <nav id="navBurguer">
                 <ul class="menuBurguer">
                     <li>
-                        <a href="/index.html">Inicio</a>
+                        <a href="index.html">Inicio</a>
                     </li>
                     <li>
-                        <a href="/peliculas.html">películas</a>
+                        <a href="peliculas.html">películas</a>
                     </li>
                     <li>
                         <a href="#">series</a>
