--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
                 <ul class="menu">
                     <li><a href="#">Inicio</a></li>
                     <li>
-                        <a href="/peliculas.html">Películas</a>
+                        <a href="peliculas.html">Películas</a>
                     </li>
-                    <li><a href="/series.html">Series</a></li>
+                    <li><a href="series.html">Series</a></li>
                 </ul>
             </nav>
 
             <input id="buscador" class="seeker" type="text" placeholder="Buscar" onkeyup="buscarPeliculas()" />
 
 
-            <a href="/index.html">
+            <a href="index.html">
                 <img
                 id="logo"
                 src="Public/img/principales/principal.png"
@@ -56,10 +56,10 @@
                     <li><a href="#">Inicio</a></li>
 
                     <li>
-                        <a href="/peliculas.html">películas</a>
+                        <a href="peliculas.html">películas</a>
                     </li>
                     <li>
-                        <a href="/series.html">series</a>
+                        <a href="series.html">series</a>
                     </li>
                     <li>
                         <a href="#">géneros</a>
