--- a/peliculas.html
+++ b/peliculas.html
@@ -15,6 +15,14 @@
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="peliculas.html">Películas</a></li>
                     <li><a href="series.html">Series</a></li>
+                    <li>
+                        <a href="#">Géneros</a>
+                        <ul class="submenu">
+                            <li><a href="#animacion">Animación</a></li>
+                            <li><a href="#comedia">Comedia</a></li>
+                            <li><a href="#drama">Drama</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </nav>
     
